--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,63 +1,65 @@
-# Universal Windows Platform
-
-# Build a Universal Windows Platform project using Visual Studio.
-# Add steps that test and distribute an app, save build artifacts, and more:
-# https://aka.ms/yaml
+# Integrate Fortify ScanCentral Static AppSec Testing (SAST) into your Azure DevOps pipeline
+# The following pipeline variables must be defined before using SAST stage
+#   - $_FCLI_DEFAULT_SC_SAST_CLIENT_AUTH_TOKEN
+#   - $_FCLI_DEFAULT_SSC_USER
+#   - $_FCLI_DEFAULT_SSC_PASSWORD
+#   - $_FCLI_DEFAULT_SSC_CI_TOKEN
+#   - $_FCLI_DEFAULT_SSC_URL
+#   - $_SSC_APP_VERSION_ID
 
 trigger:
-- main
+- none
+stages:
+- stage: Build
+  jobs:
+    - job: Build
+      displayName: Building IWA Project
+      pool:
+        vmImage: ubuntu-latest
+      steps:
+      - task: Maven@3
+        inputs:
+          mavenPomFile: 'pom.xml'
+          mavenOptions: '-Xmx3072m'
+          javaHomeOption: 'JDKVersion'
+          jdkVersionOption: '1.17'
+          jdkArchitectureOption: 'x64'
+          publishJUnitResults: true
+          testResultsFiles: '**/surefire-reports/TEST-*.xml'
+          goals: 'package'
+    - job: SAST
+      displayName: Fortify SAST
+      dependsOn:
+       - Build
+      pool:
+       vmImage: 'ubuntu-latest'
+      container:
+        image: fortifydocker/fortify-ci-tools:5.4.1-jdk-17
+        options: "--add-host=<<SSC_FQDN_NAME>>:x.x.x.x"
+        env:
+          FCLI_DEFAULT_SC_SAST_CLIENT_AUTH_TOKEN: $(_FCLI_DEFAULT_SC_SAST_CLIENT_AUTH_TOKEN)
+          FCLI_DEFAULT_SSC_USER: $(_FCLI_DEFAULT_SSC_USER)
+          FCLI_DEFAULT_SSC_PASSWORD: $(_FCLI_DEFAULT_SSC_PASSWORD)
+          FCLI_DEFAULT_SSC_CI_TOKEN: $(_FCLI_DEFAULT_SSC_CI_TOKEN)
+          FCLI_DEFAULT_SSC_URL: $(_FCLI_DEFAULT_SSC_URL)
+          SSC_APP_VERSION_ID: $(_SSC_APP_VERSION_ID)
+          SC_SAST_SENSOR_VERSION: 24.2
+      steps:
+      - script: |
+          echo Setting connection with Fortify Platform
+          echo $FORTIFY_SSC_IP fortify.cyberxdemo.com >> /etc/hosts
+          #Use --insecure switch if the SSL certificate is self generated.
+          fcli ssc session login
+          fcli sc-sast session login
+          
+          scancentral package -bt mvn -o package.zip
+          fcli sc-sast scan start --publish-to=$SSC_APP_VERSION_ID --sensor-version=$SC_SAST_SENSOR_VERSION --package-file=package.zip --store=Id
 
-pool:
-  vmImage: 'windows-latest'
+          fcli sc-sast scan wait-for ::Id:: --interval=30s
+          fcli ssc issue count --appversion=$SSC_APP_VERSION_ID
 
-variables:
-  solution: '**/*.sln'
-  buildPlatform: 'x86|x64|ARM'
-  buildConfiguration: 'Release'
-  appxPackageDir: '$(build.artifactStagingDirectory)\AppxPackages\\'
-
-steps:
-
-- task: NuGetToolInstaller@1
-
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)'
-
-- task: VSBuild@1
-  inputs:
-    platform: 'x86'
-    solution: '$(solution)'
-    configuration: '$(buildConfiguration)'
-    msbuildArgs: '/p:AppxBundlePlatforms="$(buildPlatform)" /p:AppxPackageDir="$(appxPackageDir)" /p:AppxBundle=Always /p:UapAppxPackageBuildMode=StoreUpload'
-
-- task: PowerShell@2
-  inputs:
-          targetType: 'inline'
-          script: |
-            Write-Host --- Versão do Java ---
-            java -version
-            Write-Host --- Versão do FCLI ---
-            fcli --version
-            Write-Host --- Versão do DEBRICKED CLI ---
-            debricked -v
-            Write-Host --- Loga no Fortify SSC e SC-SAST Controller ---
-            fcli ssc session login --url=${env:_FCLI_DEFAULT_SSC_URL} --ci-token=${env:_FCLI_DEFAULT_SSC_CI_TOKEN}
-            fcli sc-sast session login --client-auth-token=$(_FCLI_DEFAULT_SC_SAST_CLIENT_AUTH_TOKEN) --ssc-url=${env:_FCLI_DEFAULT_SSC_URL} --ssc-ci-token=${env:_FCLI_DEFAULT_SSC_CI_TOKEN}
-            Write-Host --- Empacota a Aplicação para o Scancentral ---
-            scancentral package --output APP.zip
-            Write-Host --- Envia o Artefato para o Scancentral Controller ---
-            fcli sc-sast scan start --package-file=APP.zip --sensor-version=24.2 --publish-to=${env:_SSC_APP_VERSION_ID} --ssc-ci-token=${env:_FCLI_DEFAULT_SSC_CI_TOKEN} --store=job:jobToken
-            Write-Host --- Debricked Scan ---
-            debricked scan --access-token=${env:_DEBRICKED_TOKEN} --repository=${env:_SSC_APP_VERSION_ID} --commit=$(Build.SourceVersion)
-            Write-Host --- Importa os Resultados Debricked no SSC  
-            fcli ssc artifact import-debricked --debricked-access-token=${env:_DEBRICKED_TOKEN} --appversion=${env:_SSC_APP_VERSION_ID} --repository=${env:_SSC_APP_VERSION_ID} --branch=$(Build.SourceBranchName)
-            Write-Host --- Espera Scan Fortify Acabar ---
-            fcli sc-sast scan wait-for --any-ssc-state=PROCESS_COMPLETE --timeout=2h ::job::jobToken --store=sscArtifactId
-            Write-Host --- Consulta ID do Ultimo Artefacto ---
-            fcli ssc appversion refresh-metrics ${env:_SSC_APP_VERSION_ID}
-            fcli ssc issue list --appversion=${env:_SSC_APP_VERSION_ID}
-            Write-Host --- Recuperação do Ultimo Artefacto Scaneado ---
-            fcli ssc appversion download-state --include-sources --file='app.fpr' ${env:_SSC_APP_VERSION_ID}
-            Write-Host --- Envia FPR => Mobb.Ai ---
-            npx mobbdev analyze --ci --scan-file=app.fpr --repo=${env:_CI_PROJECT_URL} --ref=$(Build.SourceVersion) --api-key=${env:MOBB_API_KEY}
+          echo Terminating connection with Fortify Platform
+          fcli sc-sast session logout
+          fcli ssc session logout  
+        displayName: Scan Central Scan
+        continueOnError: false
