--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ stages:
           jdkVersionOption: '1.17'
           jdkArchitectureOption: 'x64'
           publishJUnitResults: true
-          testResultsFiles: '**/surefire-reports/TEST-*.xml'
+          #testResultsFiles: '**/surefire-reports/TEST-*.xml'
           goals: 'package'
     - job: SAST
       displayName: Fortify SAST
