Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,9 +24,8 @@ stages:
           javaHomeOption: 'JDKVersion'
           jdkVersionOption: '1.17'
           jdkArchitectureOption: 'x64'
-          publishJUnitResults: true
-          #testResultsFiles: '**/surefire-reports/TEST-*.xml'
-          goals: 'package'
+          publishJUnitResults: false
+
     - job: SAST
       displayName: Fortify SAST
       dependsOn:
