--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,19 +16,9 @@ stages:
       displayName: Building IWA Project
       pool:
         vmImage: ubuntu-latest
-      steps:
+      #steps:
       
-      - task: Maven@4
-        inputs:
-          mavenPomFile: 'pom.xml'
-          publishJUnitResults: false
-          javaHomeOption: 'JDKVersion'
-          jdkVersionOption: '1.17'
-          mavenVersionOption: 'Default'
-          mavenOptions: '-Xmx3072m'
-          mavenAuthenticateFeed: false
-          effectivePomSkip: false
-          sonarQubeRunAnalysis: false
+ 
 
     - job: SAST
       displayName: Fortify SAST
