--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,29 +7,46 @@
 #   - $_FCLI_DEFAULT_SSC_URL
 #   - $_SSC_APP_VERSION_ID
 
+# Docker
+# Build a Docker image
+# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
+
 trigger:
-- none
+- main
+
+resources:
+- repo: self
+
+variables:
+  tag: '$(Build.BuildId)'
+
 stages:
 - stage: Build
+  displayName: Build image
   jobs:
-    - job: Build
-      displayName: Building IWA Project
-      pool:
-        vmImage: ubuntu-latest
-      #steps:
-      
- 
+  - job: Build
+    displayName: Build
+    pool:
+      vmImage: ubuntu-latest
+    steps:
+    - task: Docker@2
+      displayName: Build an image
+      inputs:
+        command: build
+        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+        tags: |
+          $(tag)
 
-    - job: SAST
-      displayName: Fortify SAST
-      dependsOn:
-       - Build
-      pool:
-       vmImage: 'ubuntu-latest'
-      container:
-        image: fortifydocker/fortify-ci-tools:5.4.1-jdk-17
-        options: "--add-host=<<SSC_FQDN_NAME>>:x.x.x.x"
-        env:
+  - job: SAST
+    displayName: Fortify SAST
+    dependsOn:
+     - Build
+    pool:
+     vmImage: 'ubuntu-latest'
+     container:
+      image: fortifydocker/fortify-ci-tools:5.4.1-jdk-17
+      options: "--add-host=<<SSC_FQDN_NAME>>:x.x.x.x"
+      env:
           FCLI_DEFAULT_SC_SAST_CLIENT_AUTH_TOKEN: $(_FCLI_DEFAULT_SC_SAST_CLIENT_AUTH_TOKEN)
           FCLI_DEFAULT_SSC_USER: $(_FCLI_DEFAULT_SSC_USER)
           FCLI_DEFAULT_SSC_PASSWORD: $(_FCLI_DEFAULT_SSC_PASSWORD)
