--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,8 @@ stages:
     displayName: Build
     pool:
       vmImage: ubuntu-latest
+    container:
+      image: openjdk:17-jdk  # Use JDK 17
     steps:
     - script: |
         echo "Building the project with Maven..."
