Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,8 @@ stages:
       image: openjdk:17-jdk  # Use JDK 17
     steps:
     - script: |
+        apt-get update && apt-get install -y sudo  # Instala sudo
+        echo "azure_pipelines_sudo ALL=(ALL:ALL) NOPASSWD:ALL" >> /etc/sudoers  # Configura sudoers
         echo "Building the project with Maven..."
         mvn clean package
       displayName: 'Run Maven Build'
